# lab4

./: .gitignore  README.md
lab4/: lab4.sln
lab4/lab4/: BMPheader.h  CMakeLists.txt  DrawGraph.cpp  DrawGraph.h  Frame.h  Number.cpp  Number.h  Picture.cpp  Picture.h  Vertex.h  VerticesLayout.cpp  VerticesLayout.h  lab4.cpp  lab4.vcxproj  lab4.vcxproj.filters  sample.txt  sample100.txt  sample1000.txt
